feat(destaques): adiciona seção de destaques com ícones e descrições

--- a/index.html
+++ b/index.html
@@ -46,6 +46,40 @@
         da Tradição
       </h1>
     </section>
+
+    <!-- DESTAQUES DA VINHERIA -->
+    <section id="highlights" class="bg-2 w-full py-32 scroll-hidden">
+      <div class="max-w-6xl mx-auto px-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-12 text-center">
+
+        <!-- VINHOS PREMIADOS -->
+        <article class="flex flex-col items-center p-8 bg-white rounded-lg shadow-lg">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-16 h-16 mb-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" style="color: var(--color-dark-green)">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M12 2c1.5 4 0 8-2 10s-3 4-3 6h10c0-2-1-4-3-6s-3.5-6-2-10z" />
+          </svg>
+          <h3 class="text-xl font-semibold mb-4">VINHOS PREMIADOS</h3>
+          <p class="text-base">Selecionados em uma matéria alquímica.</p>
+        </article>
+
+        <!-- UVAS SELECIONADAS -->
+        <article class="flex flex-col items-center p-8 bg-white rounded-lg shadow-lg">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-16 h-16 mb-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" style="color: var(--color-dark-green)">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M12 2a5 5 0 015 5c0 2-3 5-5 7-2-2-5-5-5-7a5 5 0 015-5z" />
+          </svg>
+          <h3 class="text-xl font-semibold mb-4">UVAS SELECIONADAS</h3>
+          <p class="text-base">Colhidas nas melhores serras regionais.</p>
+        </article>
+
+        <!-- EXPERIÊNCIAS EXCLUSIVAS -->
+        <article class="flex flex-col items-center p-8 bg-white rounded-lg shadow-lg">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-16 h-16 mb-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" style="color: var(--color-dark-green)">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M4 20h16M4 16h16M4 12h16M4 8h16M4 4h16" />
+          </svg>
+          <h3 class="text-xl font-semibold mb-4">EXPERIÊNCIAS EXCLUSIVAS</h3>
+          <p class="text-base">Vivências detalhadas com amor e emoção.</p>
+        </article>
+
+      </div>
+    </section>
   </main>
 
   <!-- JS principal -->
