feat(produtos): adiciona cards de vinhos com imagem, nome e descrição

--- a/index.html
+++ b/index.html
@@ -78,6 +78,44 @@
 
       </div>
     </section>
+
+    <!-- SEÇÃO DE VINHOS -->
+<section id="vinhos" class="bg-3 py-20">
+    <div class="max-w-6xl mx-auto px-6">
+  
+      <!-- TÍTULO -->
+      <h2 class="text-4xl font-playfair font-semibold text-center text-white mb-10 shadow-lg">
+        Nossos Vinhos
+      </h2>
+  
+      <!-- GRID DE PRODUTOS -->
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-12">
+  
+        <!-- Vinho Tinto Reserva -->
+        <article class="flex flex-col items-center p-6 bg-white rounded-lg shadow-2xl">
+          <img src="src/assets/misc/image_wine1.png" alt="Vinho Tinto Reserva" class="w-full h-50 object-cover rounded-lg mb-4">
+          <h3 class="text-xl font-semibold mb-2">Vinho Tinto Reserva</h3>
+          <p class="text-base text-gray-700">Um vinho encorpado com notas de frutas vermelhas e um toque de carvalho.</p>
+        </article>
+  
+        <!-- Vinho Branco Chardonnay -->
+        <article class="flex flex-col items-center p-6 bg-white rounded-lg shadow-2xl">
+          <img src="src/assets/misc/image_wine2.png" alt="Vinho Branco Chardonnay" class="w-full h-50 object-cover rounded-lg mb-4">
+          <h3 class="text-xl font-semibold mb-2">Vinho Branco Chardonnay</h3>
+          <p class="text-base text-gray-700">Refrescante e elegante, com aromas de frutas cítricas e flores brancas.</p>
+        </article>
+  
+        <!-- Espumante Brut -->
+        <article class="flex flex-col items-center p-6 bg-white rounded-lg shadow-2xl">
+          <img src="src/assets/misc/image_wine3.png" alt="Espumante Brut" class="w-full h-50 object-cover rounded-lg mb-4">
+          <h3 class="text-xl font-semibold mb-2">Espumante Brut</h3>
+          <p class="text-base text-gray-700">Perfeito para celebrações, com bolhas finas e um sabor equilibrado.</p>
+        </article>
+  
+      </div>
+    </div>
+  </section>
+  
   </main>
 
   <script src="src/js/script.js" defer></script>
