feat(footer): implementa rodapé com contato, informações e redes sociais

--- a/index.html
+++ b/index.html
@@ -115,8 +115,45 @@
       </div>
     </div>
   </section>
-  
   </main>
+
+  <!-- RODAPÉ -->
+<footer id="footer" class="bg-black text-white py-10">
+    <div class="max-w-6xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-8">
+  
+      <!-- SOBRE -->
+      <section>
+        <h3 class="text-lg font-semibold mb-4">Vinheria Agnello</h3>
+        <p class="text-sm">A Vinheria Agnello é dedicada a oferecer vinhos de qualidade excepcional, celebrando a tradição e a paixão pelo mundo do vinho.</p>
+      </section>
+  
+      <!-- CONTATO -->
+      <section>
+        <h3 class="text-lg font-semibold mb-4">Contato</h3>
+        <ul class="text-sm space-y-2">
+          <li>Email: contato@vinheriaagnello.com</li>
+          <li>Telefone: (11) 1234-5678</li>
+          <li>Endereço: Rua dos Vinhedos, 123, São Paulo, SP</li>
+        </ul>
+      </section>
+  
+      <!-- REDES SOCIAIS -->
+      <section>
+        <h3 class="text-lg font-semibold mb-4">Siga-nos</h3>
+        <ul class="flex space-x-4">
+          <li><a href="#" class="hover:text-gray-400">Facebook</a></li>
+          <li><a href="#" class="hover:text-gray-400">Instagram</a></li>
+          <li><a href="#" class="hover:text-gray-400">Twitter</a></li>
+        </ul>
+      </section>
+  
+    </div>
+  
+    <!-- COPYRIGHT -->
+    <div class="text-center text-sm mt-8">
+      &copy; 2025 Vinheria Agnello. Todos os direitos reservados.
+    </div>
+  </footer>
 
   <script src="src/js/script.js" defer></script>
 </body>
