--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </section>
 
     <!-- SOBRE A VINHERIA -->
-    <section id="sobre-nos" class="bg-2 py-20">
+    <section id="sobre-nos" class="bg-2 py-20 scroll-hidden">
       <div class="max-w-6xl mx-auto px-6 flex flex-col-reverse md:flex-row items-center gap-10">
 
         <!-- TEXTO -->
