--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Estilos -->
-  <link rel="stylesheet" href="src/styles/nav.css">
-  <link rel="stylesheet" href="src/styles/utility.css">
+  <link rel="stylesheet" href="global.css">
 
   <!-- Fontes externas -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,16 +16,24 @@
   <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
 </head>
 
 <body class="bg-1">
 
-  <!-- NAVBAR -->
+  <!-- Script principal com efeitos de animação e transições -->
+  <script src="src/js/script.js" defer></script>
+
+  <!-- Header com navegação principal -->
   <header id="va-nav" class="z-50 w-full flex items-center justify-center">
     <nav class="flex justify-around w-full mt-3" aria-label="Navegação principal">
+
+      <!-- Logotipo da Vinheria -->
       <div class="glass-bg rounded-full p-5">
         <a href="index.html" class="logo text-lg font-poiret">Vinheria Agnello</a>
       </div>
+
+      <!-- Menu de navegação -->
       <ul class="glass-bg rounded-full px-6 py-3 flex gap-10 items-center">
         <li><a href="#introduction" class="nav-btn">Home</a></li>
         <li><a href="#vinhos" class="nav-btn">Produtos</a></li>
@@ -38,28 +43,48 @@
     </nav>
   </header>
 
-  <!-- HERO -->
   <main>
+    <!-- Seção de destaque principal com slogan -->
     <section id="introduction" class="flex justify-center items-center flex-col h-screen">
-      <h1 id="titulo" class="text-center fade-text text-4xl font-bold leading-snug text-white drop-shadow-md">
+      <h1 id="titulo" class="text-center fade-text text-4xl font-bold leading-snug">
         Descubra o sabor<br>
         da Tradição
       </h1>
     </section>
 
-    <!-- DESTAQUES -->
+    <!-- Seção de diferenciais da vinheria -->
     <section id="highlights" class="bg-2 w-full py-32 scroll-hidden">
       <div class="max-w-6xl mx-auto px-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-12 text-center">
-        <!-- Cards já adicionados no commit anterior -->
-        ...
+
+        <!-- Card: Vinhos premiados -->
+        <article class="flex flex-col items-center p-8 bg-white rounded-lg shadow-lg">
+          <svg ...>...</svg>
+          <h3 class="text-xl font-semibold mb-4">VINHOS PREMIADOS</h3>
+          <p class="text-base">Selecionados em uma matéria alquímica.</p>
+        </article>
+
+        <!-- Card: Uvas selecionadas -->
+        <article class="flex flex-col items-center p-8 bg-white rounded-lg shadow-lg">
+          <svg ...>...</svg>
+          <h3 class="text-xl font-semibold mb-4">UVAS SELECIONADAS</h3>
+          <p class="text-base">Colhidas nas melhores serras regionais.</p>
+        </article>
+
+        <!-- Card: Experiências exclusivas -->
+        <article class="flex flex-col items-center p-8 bg-white rounded-lg shadow-lg">
+          <svg ...>...</svg>
+          <h3 class="text-xl font-semibold mb-4">EXPERIÊNCIAS EXCLUSIVAS</h3>
+          <p class="text-base">Vivências detalhadas com amor e emoção.</p>
+        </article>
+
       </div>
     </section>
 
-    <!-- SOBRE A VINHERIA -->
+    <!-- Seção institucional com imagem e descrição -->
     <section id="sobre-nos" class="bg-2 py-20 scroll-hidden">
       <div class="max-w-6xl mx-auto px-6 flex flex-col-reverse md:flex-row items-center gap-10">
 
-        <!-- TEXTO -->
+        <!-- Bloco de texto -->
         <article class="md:w-1/2">
           <h2 class="text-4xl font-playfair font-semibold text-[#4D4B2B] mb-6">Sobre a Vinheria Agnello</h2>
           <p class="text-gray-700 text-lg leading-relaxed font-geist">
@@ -71,63 +96,60 @@
           </p>
         </article>
 
-        <!-- IMAGEM -->
+        <!-- Imagem institucional -->
         <figure class="md:w-1/2">
           <img src="src/assets/misc/image_family.jpg" alt="Vinhedo" class="rounded-xl shadow-xl w-full object-cover">
         </figure>
-
       </div>
     </section>
 
-    <!-- SEÇÃO DE VINHOS -->
-<section id="vinhos" class="bg-3 py-20">
-    <div class="max-w-6xl mx-auto px-6">
-  
-      <!-- TÍTULO -->
-      <h2 class="text-4xl font-playfair font-semibold text-center text-white mb-10 shadow-lg">
-        Nossos Vinhos
-      </h2>
-  
-      <!-- GRID DE PRODUTOS -->
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-12">
-  
-        <!-- Vinho Tinto Reserva -->
-        <article class="flex flex-col items-center p-6 bg-white rounded-lg shadow-2xl">
-          <img src="src/assets/misc/image_wine1.png" alt="Vinho Tinto Reserva" class="w-full h-50 object-cover rounded-lg mb-4">
-          <h3 class="text-xl font-semibold mb-2">Vinho Tinto Reserva</h3>
-          <p class="text-base text-gray-700">Um vinho encorpado com notas de frutas vermelhas e um toque de carvalho.</p>
-        </article>
-  
-        <!-- Vinho Branco Chardonnay -->
-        <article class="flex flex-col items-center p-6 bg-white rounded-lg shadow-2xl">
-          <img src="src/assets/misc/image_wine2.png" alt="Vinho Branco Chardonnay" class="w-full h-50 object-cover rounded-lg mb-4">
-          <h3 class="text-xl font-semibold mb-2">Vinho Branco Chardonnay</h3>
-          <p class="text-base text-gray-700">Refrescante e elegante, com aromas de frutas cítricas e flores brancas.</p>
-        </article>
-  
-        <!-- Espumante Brut -->
-        <article class="flex flex-col items-center p-6 bg-white rounded-lg shadow-2xl">
-          <img src="src/assets/misc/image_wine3.png" alt="Espumante Brut" class="w-full h-50 object-cover rounded-lg mb-4">
-          <h3 class="text-xl font-semibold mb-2">Espumante Brut</h3>
-          <p class="text-base text-gray-700">Perfeito para celebrações, com bolhas finas e um sabor equilibrado.</p>
-        </article>
-  
+    <!-- Seção de vinhos disponíveis -->
+    <section id="vinhos" class="bg-3 py-20 scroll-hidden">
+      <div class="max-w-6xl mx-auto px-6">
+        <h2 class="text-4xl font-playfair font-semibold text-center text-white mb-10 shadow-lg">
+          Nossos Vinhos
+        </h2>
+
+        <!-- Cards de vinhos -->
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-12">
+
+          <!-- Produto: Vinho Tinto -->
+          <article class="flex flex-col items-center p-6 bg-white rounded-lg shadow-2xl">
+            <img src="src/assets/misc/image_wine1.png" alt="Vinho Tinto Reserva" class="w-full h-50 object-cover rounded-lg mb-4">
+            <h3 class="text-xl font-semibold mb-2">Vinho Tinto Reserva</h3>
+            <p class="text-base text-gray-700">Um vinho encorpado com notas de frutas vermelhas e um toque de carvalho.</p>
+          </article>
+
+          <!-- Produto: Chardonnay -->
+          <article class="flex flex-col items-center p-6 bg-white rounded-lg shadow-2xl">
+            <img src="src/assets/misc/image_wine2.png" alt="Vinho Branco Chardonnay" class="w-full h-50 object-cover rounded-lg mb-4">
+            <h3 class="text-xl font-semibold mb-2">Vinho Branco Chardonnay</h3>
+            <p class="text-base text-gray-700">Refrescante e elegante, com aromas de frutas cítricas e flores brancas.</p>
+          </article>
+
+          <!-- Produto: Espumante -->
+          <article class="flex flex-col items-center p-6 bg-white rounded-lg shadow-2xl">
+            <img src="src/assets/misc/image_wine3.png" alt="Espumante Brut" class="w-full h-50 object-cover rounded-lg mb-4">
+            <h3 class="text-xl font-semibold mb-2">Espumante Brut</h3>
+            <p class="text-base text-gray-700">Perfeito para celebrações, com bolhas finas e um sabor equilibrado.</p>
+          </article>
+
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
   </main>
 
-  <!-- RODAPÉ -->
-<footer id="footer" class="bg-black text-white py-10">
+  <!-- Rodapé com informações institucionais, contato e redes sociais -->
+  <footer id="footer" class="bg-black text-white py-10">
     <div class="max-w-6xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-8">
-  
-      <!-- SOBRE -->
+
+      <!-- Institucional -->
       <section>
         <h3 class="text-lg font-semibold mb-4">Vinheria Agnello</h3>
         <p class="text-sm">A Vinheria Agnello é dedicada a oferecer vinhos de qualidade excepcional, celebrando a tradição e a paixão pelo mundo do vinho.</p>
       </section>
-  
-      <!-- CONTATO -->
+
+      <!-- Contato -->
       <section>
         <h3 class="text-lg font-semibold mb-4">Contato</h3>
         <ul class="text-sm space-y-2">
@@ -136,8 +158,8 @@
           <li>Endereço: Rua dos Vinhedos, 123, São Paulo, SP</li>
         </ul>
       </section>
-  
-      <!-- REDES SOCIAIS -->
+
+      <!-- Redes sociais -->
       <section>
         <h3 class="text-lg font-semibold mb-4">Siga-nos</h3>
         <ul class="flex space-x-4">
@@ -146,16 +168,14 @@
           <li><a href="#" class="hover:text-gray-400">Twitter</a></li>
         </ul>
       </section>
-  
     </div>
-  
-    <!-- COPYRIGHT -->
+
+    <!-- Direitos autorais -->
     <div class="text-center text-sm mt-8">
       &copy; 2025 Vinheria Agnello. Todos os direitos reservados.
     </div>
   </footer>
 
-  <script src="src/js/script.js" defer></script>
 </body>
 
 </html>
