feat(card): aplica animação de hover para aumentar o tamanho

--- a/index.html
+++ b/index.html
@@ -120,26 +120,29 @@
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-12">
 
           <!-- Produto: Vinho Tinto -->
-          <article class="flex flex-col items-center p-6 bg-white rounded-lg shadow-2xl">
-            <img src="src/assets/misc/image_wine1.png" alt="Vinho Tinto Reserva" class="w-full h-50 object-cover rounded-lg mb-4">
-            <h3 class="text-xl font-semibold mb-2">Vinho Tinto Reserva</h3>
-            <p class="text-base text-gray-700">Um vinho encorpado com notas de frutas vermelhas e um toque de carvalho.</p>
-          </article>
-
+          <div class="bg-white p-6 rounded-xl shadow-md transform transition-transform duration-300 hover:scale-105">
+            <article class="flex flex-col items-center p-6 bg-white rounded-lg shadow-2xl">
+              <img src="src/assets/misc/image_wine1.png" alt="Vinho Tinto Reserva" class="w-full h-50 object-cover rounded-lg mb-4">
+              <h3 class="text-xl font-semibold mb-2">Vinho Tinto Reserva</h3>
+              <p class="text-base text-gray-700">Um vinho encorpado com notas de frutas vermelhas e um toque de carvalho.</p>
+            </article>
+          </div>
           <!-- Produto: Chardonnay -->
-          <article class="flex flex-col items-center p-6 bg-white rounded-lg shadow-2xl">
-            <img src="src/assets/misc/image_wine2.png" alt="Vinho Branco Chardonnay" class="w-full h-50 object-cover rounded-lg mb-4">
-            <h3 class="text-xl font-semibold mb-2">Vinho Branco Chardonnay</h3>
-            <p class="text-base text-gray-700">Refrescante e elegante, com aromas de frutas cítricas e flores brancas.</p>
-          </article>
-
+          <div class="bg-white p-6 rounded-xl shadow-md transform transition-transform duration-300 hover:scale-105">
+            <article class="flex flex-col items-center p-6 bg-white rounded-lg shadow-2xl">
+              <img src="src/assets/misc/image_wine2.png" alt="Vinho Branco Chardonnay" class="w-full h-50 object-cover rounded-lg mb-4">
+              <h3 class="text-xl font-semibold mb-2">Vinho Branco Chardonnay</h3>
+              <p class="text-base text-gray-700">Refrescante e elegante, com aromas de frutas cítricas e flores brancas.</p>
+            </article>
+          </div>
           <!-- Produto: Espumante -->
-          <article class="flex flex-col items-center p-6 bg-white rounded-lg shadow-2xl">
-            <img src="src/assets/misc/image_wine3.png" alt="Espumante Brut" class="w-full h-50 object-cover rounded-lg mb-4">
-            <h3 class="text-xl font-semibold mb-2">Espumante Brut</h3>
-            <p class="text-base text-gray-700">Perfeito para celebrações, com bolhas finas e um sabor equilibrado.</p>
-          </article>
-
+          <div class="bg-white p-6 rounded-xl shadow-md transform transition-transform duration-300 hover:scale-105">
+            <article class="flex flex-col items-center p-6 bg-white rounded-lg shadow-2xl">
+              <img src="src/assets/misc/image_wine3.png" alt="Espumante Brut" class="w-full h-50 object-cover rounded-lg mb-4">
+              <h3 class="text-xl font-semibold mb-2">Espumante Brut</h3>
+              <p class="text-base text-gray-700">Perfeito para celebrações, com bolhas finas e um sabor equilibrado.</p>
+            </article>
+          </div>
         </div>
       </div>
     </section>
