feat(nav): adiciona animação de escala nos links do menu com hover

--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
 
       <!-- Menu de navegação -->
       <ul class="glass-bg rounded-full px-6 py-3 flex gap-10 items-center">
-        <li><a href="#introduction" class="nav-btn">Home</a></li>
-        <li><a href="#vinhos" class="nav-btn">Produtos</a></li>
-        <li><a href="#sobre-nos" class="nav-btn">Sobre Nós</a></li>
-        <li><a href="#footer" class="nav-btn">Contato</a></li>
+
+        <li class="transform transition-transform duration-300 hover:scale-110"><a href="#introduction" class="nav-btn">Home</a></li>
+        <li class="transform transition-transform duration-300 hover:scale-110"><a href="#vinhos" class="nav-btn">Produtos</a></li>
+        <li class="transform transition-transform duration-300 hover:scale-110"><a href="#sobre-nos" class="nav-btn">Sobre Nós</a></li>
+        <li class="transform transition-transform duration-300 hover:scale-110"><a href="#footer" class="nav-btn">Contato</a></li>
+          
       </ul>
     </nav>
   </header>
