feat(botão): adicionado estrutura do botão de voltar ao topo no HTML

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       &copy; 2025 Vinheria Agnello. Todos os direitos reservados.
     </div>
   </footer>
-
+  <button onclick="scrollToTop()" id="btnTop" title="Voltar ao topo">↑</button>
 </body>
 
 </html>
