--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vinheria Agnello</title>
 
+  <!-- Icone da Vinheria -->
+  <link rel="icon" href="src/assets/misc/icone_vinho.png" type="image/png">
+
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="global.css">
