style(footer): change background color to black

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </section>
   </main>
 
-  <footer id="footer" class="bg-[#4D4B2B] text-white py-10">
+  <footer id="footer" class="bg-[#000000] text-white py-10">
     <div class="max-w-6xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-8">
 
       <section>
